# cmake-flex-bison-example

./: .gitignore  CMakeLists.txt  README.md
src/: lexer.l  main.c  parser.y
